--- a/src/main/resources/archetype-resources/pom.xml
+++ b/src/main/resources/archetype-resources/pom.xml
@@ -8,7 +8,7 @@
     <packaging>jar</packaging>
 
     <properties>
-        <kotlin.version>1.0.5</kotlin.version>
+        <kotlin.version>1.0.5-2</kotlin.version>
         <tornadofx.version>1.5.8</tornadofx.version>
     </properties>
 
