--- a/src/main/resources/archetype-resources/pom.xml
+++ b/src/main/resources/archetype-resources/pom.xml
@@ -8,8 +8,8 @@
     <packaging>jar</packaging>
 
     <properties>
-        <kotlin.version>1.1.2-5</kotlin.version>
-        <tornadofx.version>1.7.7</tornadofx.version>
+        <kotlin.version>1.1.3</kotlin.version>
+        <tornadofx.version>1.7.8</tornadofx.version>
     </properties>
 
     <dependencies>
