--- a/src/main/resources/archetype-resources/pom.xml
+++ b/src/main/resources/archetype-resources/pom.xml
@@ -8,8 +8,8 @@
     <packaging>jar</packaging>
 
     <properties>
-        <kotlin.version>1.1.4-3</kotlin.version>
-        <tornadofx.version>1.7.11</tornadofx.version>
+        <kotlin.version>1.1.51</kotlin.version>
+        <tornadofx.version>1.7.12</tornadofx.version>
     </properties>
 
     <dependencies>
